# sp-lightrag-agent

./: README.md  REPORT.md  REPORT_EN.md  llm_only.py  main.py  pyproject.toml
app/: __init__.py  config.py
app/agent/: graph.py
app/models/: __init__.py  schemas.py
app/rag/: __init__.py  retriever.py
app/ui/: __init__.py  app.py
data/lightrag_storage/: kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json
data/sp/: СП 1.13130.2020 - Системы противопожарной защиты. Эвакуационные пути и выходы.md  СП 118.13330.2022 - Общественные здания и сооружения.md  СП 54.13330.2022 - Здания жилые многоквартирные.md  СП 55.13330.2016 - Дома жилые одноквартирные.md
scripts/: lightrag_only.py
